--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,4 +1,16 @@
 rootProject.name = 'Dream'
+include ':react-native-paytm'
+project(':react-native-paytm').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-paytm/android')
+include ':react-native-paytmpay'
+project(':react-native-paytmpay').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-paytmpay/android')
+include ':react-native-paytm'
+project(':react-native-paytm').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-paytm/android')
+include ':react-native-paytmpay'
+project(':react-native-paytmpay').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-paytmpay/android')
+include ':react-native-paytmpay'
+project(':react-native-paytmpay').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-paytmpay/android')
+include ':react-native-paytm'
+project(':react-native-paytm').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-paytm/android')
 include ':react-native-gesture-handler'
 project(':react-native-gesture-handler').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-gesture-handler/android')
 include ':react-native-vector-icons'
