--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "16.6.1",
     "react-native": "0.57.7",
     "react-native-gesture-handler": "^1.0.10",
+    "react-native-paytm": "^1.0.4",
     "react-native-step-indicator": "0.0.9",
     "react-native-vector-icons": "^6.1.0",
     "react-navigation": "^3.0.8",
