--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "react-native-step-indicator": "0.0.9",
     "react-native-vector-icons": "^6.1.0",
     "react-navigation": "^3.0.8",
+    "redux": "^4.0.1",
+    "redux-persist": "^5.10.0",
     "rn-viewpager": "^1.2.9"
   },
   "devDependencies": {
